<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_background"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="130dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:text="@string/online"
        android:textColor="#ffff"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/input_username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/edit_shape"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="12dp"
        android:hint="@string/user_name"
        android:textColorHint="#000"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/edit_shape"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="12dp"
        android:hint="@string/Password"
        android:inputType="numberPassword"
        android:textColorHint="#000"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:checked="true"
        android:text="@string/remember_me"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_selector"
        android:text="@string/login"
        android:textColor="@color/white" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/sing_up_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_selector"
        android:text="@string/Sing_up"
        android:textColor="@color/white" />
</LinearLayout>