<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="@string/pause"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:textColor="@color/white"
        android:id="@+id/resume_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_selector"
        android:text="@string/resume" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:textColor="@color/white"
        android:id="@+id/setting_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_selector"
        android:text="@string/settings" />

    <Space
        android:layout_width="0dp"
        android:layout_height="20dp" />

    <LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/restart_btn"
            android:background="@drawable/btn_selector"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_refresh_black_24dp"
            android:text="Restart" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/exit_btn"
            android:background="@drawable/btn_selector"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_exit_to_app_black_24dp"
            android:text="Exit" />
    </LinearLayout>
</LinearLayout>